--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -10,6 +10,7 @@
 
 
 <%= link_to "Home", root_path %> <br>
-<%= link_to "Edit", edit_job_path(@job)%>
+<%= link_to "Edit", edit_job_path(@job)%> <br>
+<%= link_to "Delete", job_path(@job), method: :delete, data:{ confirm:" Are You Sure "}  %>
 
 <br>
